[CLIENT] Fix deadline date numbers not showing

--- a/client/src/components/templates/content_objects/Deadline.css
+++ b/client/src/components/templates/content_objects/Deadline.css
@@ -11,7 +11,7 @@
 
 .deadline-content-container {
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
+  grid-template-columns: 1fr 1.25fr;
   column-gap: 1rem;
 }
 
